--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "@angular/platform-browser": "~14.1.0",
     "@angular/platform-browser-dynamic": "~14.1.0",
     "@angular/router": "~14.1.0",
-    "bootstrap": "^5.1.3",
-    "flowtype": "^2.0.0",
-    "http": "0.0.1-security",
-    "jsonwebtoken": "^8.5.1",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "express": "^4.18.1",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.11.6",
     "@types/html": "^1.0.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "~16.11.45",
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
+    "express": "^4.18.1",
+    "flowtype": "^2.0.0",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "ngx-pagination": "^6.0.2",
+    "ngx-spinner": "^14.0.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
