--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "flowtype": "^2.0.0",
     "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "ng": "^0.0.0",
+    "ngx-logger": "^5.0.11",
     "ngx-pagination": "^6.0.2",
     "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
