--- a/package.json
+++ b/package.json
@@ -24,11 +24,20 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@types/html": "^1.0.1",
+    "@types/jasmine": "~3.8.0",
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "bootstrap": "^5.2.3",
+    "flowtype": "^2.0.0",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "ng": "^0.0.0",
+    "ngx-logger": "^5.0.11",
     "html-loader": "^4.2.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
